# shido

./: .env.example  README.md  enums.py  manage.py  pyproject.toml  requirements.txt  resource.md
apis/: serializers.py  urls.py  views.py
apps/: admin.py  forms.py  models.py  urls.py  views.py
apps/migrations/: 0001_initialize_class.py  0002_merge_instance_relation.py  0003_add_class_to_property_type.py  0004_apply_limitation_blank.py  0005_remove_instance_instance_connection.py  0006_alter_propertytype_raw_type.py  0007_alter_objectpropertyrelation_raw_value.py
apps/templatetags/: json_to_list.py  markdown_converter.py  object_renderer.py
shido/: asgi.py  info.py  logger_helper.py  settings.py  urls.py  wsgi.py
static/css/: index.css
templates/apps/: _template.html  base.html  home.html
templates/apps/class/: create.html  detail.html  edit.html  list.html
templates/apps/instance_instance_connection/: create.html  detail.html  list.html
templates/apps/instances/: add_property.html  add_property_form.html  add_property_list.html  create.html  detail.html  detail_raw.html  detail_wiki.html  edit.html  list.html  property_form.html  property_list.html
templates/apps/property_type/: create.html  detail.html  list.html
templates/users/: _template.html  base.html  login.html  signup.html
templates/users/manage/: add.html  edit.html  list.html
templates/users/settings/: profile.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_create_profile.py  0002_alter_profile_avatar.py
(+1 files in other folders)
